[package]
name = "baseconv-component"
version = "0.1.0"
edition = "2021"
description = """
Arbitrary base 2-36 conversion (hand-rolled)
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
baseconv-core = { path = "../../../datalink/extensions/baseconv-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
# add your upstream crate deps here

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
