[package]
name = "bech32-component"
version = "0.1.0"
edition = "2021"
description = """
Bech32 encode/decode/validate
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
bech32-core = { path = "../../../datalink/extensions/bech32-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
bech32 = "*"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
