[package]
name = "bencode-component"
version = "0.1.0"
edition = "2021"
description = """
BitTorrent bencode decode: bencode_to_json / bencode_is_valid
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
serde_bencode = "0.2"
serde_bytes = "0.11"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
