[package]
name = "bibtex-component"
version = "0.1.0"
edition = "2021"
description = """
BibTeX parsing scalars: bibtex_count, bibtex_to_json, bibtex_keys
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
biblatex = "0.12"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
