[package]
name = "bitfilters-component"
version = "0.1.0"
edition = "2021"
description = """
Xor approximate-membership filter (aggregate build + membership scalar)
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
xorf = { version = "0.12", features = ["serde"] }
bincode = "1"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
