[package]
name = "braille-component"
version = "0.1.0"
edition = "2021"
description = """
Text -> Unicode Braille (hand-rolled)
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
braille-core = { path = "../../../datalink/extensions/braille-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
# add your upstream crate deps here

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
