[package]
name = "bundle-dotcmd"
version = "0.1.0"
edition = "2021"
description = "Embedding-tracking dot command (.bundle): list/show what builds embed which extensions (sqlink Bundles parity)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "duckdb:dotcmd"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:dotcmd/dotcmd"
