[package]
name = "casing-component"
version = "0.1.0"
edition = "2021"
description = """
Identifier case conversions: snake, camel, pascal, kebab, title, shouty
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
heck = "0.5"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
