[package]
name = "casing-component"
version = "0.1.0"
edition = "2021"
description = """
Identifier case conversions: snake, camel, pascal, kebab, title, shouty
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
casing-core = { path = "../../../datalink/extensions/casing-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
heck = "0.5"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
