[package]
name = "cbor-component"
version = "0.1.0"
edition = "2021"
description = """
JSON <-> CBOR (hex)
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
ciborium = "*"
serde_json = "*"
hex = "*"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
